# agentapi

./: CONTRIBUTING.md  README.md  pyproject.toml
agentapi/agent/: agent.py  tools.py
agentapi/core/: app.py
agentapi/providers/: openai_compatible.py
docs/: cli.md  installation.md
tests/: test_openai_compatible_provider.py
